# cloud-sdk

./: .justfile  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cloud-sdk/: Cargo.toml  README.md
crates/cloud-sdk/specs/: applications.json
crates/cloud-sdk/src/: client.rs  error.rs  event_source.rs  lib.rs
crates/cloud-sdk/src/applications/: mod.rs  models.rs
crates/cloud-sdk/src/applications/apis/: configuration.rs  ingestion_api.rs  mod.rs  operations_api.rs  retrieve_api.rs
crates/cloud-sdk/src/applications/models/: allocation.rs  application.rs  application_function.rs  application_requests.rs  applications_list.rs  create_namespace.rs  cursor_direction.rs  download_output.rs  entry_point_manifest.rs  executor_allocations.rs  executor_metadata.rs  executors_allocations_response.rs  fn_executor.rs  function.rs  function_allowlist.rs  function_executor_metadata.rs  function_resources.rs  function_run.rs  function_run_outcome.rs  function_run_status.rs  gpu_resources.rs  host_resources.rs  indexify_api_error.rs  list_params.rs  mod.rs  namespace.rs  namespace_list.rs  node_retry_policy.rs  parameter_metadata.rs  placement_constraints.rs  request.rs  request_error.rs  request_failure_reason.rs  request_outcome.rs  request_outcome_one_of.rs  shallow_request.rs  state_change.rs  state_changes_response.rs  unallocated_function_runs.rs
crates/cloud-sdk/src/images/: mod.rs  models.rs
crates/cloud-sdk/src/secrets/: mod.rs  models.rs
crates/cloud-sdk/tests/: applications.rs  applications_client.rs  common.rs  images.rs  images_client.rs  secrets.rs
examples/: poll_progress_updates.rs
